# client_manager_users

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.txt  create_tb.sql  main.cpp  test.cpp
lib/: CMakeLists.txt
lib/dialog/: CMakeLists.txt  dialog.h
lib/my_user/: my_user.cpp  my_user.h
